<resources>
    <string name="app_name">SvatkyApp</string>
    <!-- Spodní navigace -->
    <string name="title_calendar">Kalendář</string>
    <string name="title_search">Vyhledávání</string>
    <string name="title_favorites">Oblíbené</string>

    <!-- Klasický kalendář -->
    <string name="nameday_title">Svátek má:</string>
    <string name="nameday_placeholder">---</string>
    <string name="btn_show_row_calendar">Zobrazit řádkový kalendář</string>

    <!-- Řádkový kalendář -->
    <string name="select_month">Vyber měsíc:</string>
    <string name="btn_show_classic_calendar">Zobrazit klasický kalendář</string>
    <string name="add_to_favorites">Přidat do oblíbených</string>

    <!-- Vyhledavání -->
    <string name="hint_date">Zadejte datum (DD.MM.)</string>
    <string name="btn_search_by_date">Vyhledat podle data</string>
    <string name="select_date_icon">Vybrat datum</string>
    <string name="label_nameday">Svátek má:</string>
    <string name="hint_name">Zadejte jméno</string>
    <string name="btn_search_by_name">Vyhledat podle jména</string>
    <string name="label_date_of_nameday">Datum svátku:</string>

    <!-- Oblíbení -->
    <string name="no_favorites">Žádné oblíbené:</string>
    <string name="delete_favorites">Podržením položky ji odstraníte</string>

    <!-- Spinner -->
    <string name="date_choose">Vyber datum:</string>
    <string name="confirm">Potvrdit</string>

</resources>
