<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Vyhledávání -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/title_search"
            android:textColor="#000000"
            android:textSize="23sp" />

        <!-- Řádek s datem a tlačítkem kalendáře -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/inputDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_date"
                android:textSize="20sp"
                android:padding="15dp"
                android:inputType="datetime"
                android:digits="0123456789."
                android:textColor="#000000"
                android:autofillHints="date"
                android:textColorHint="#565656"
                android:backgroundTint="#FFFFFF" />

            <ImageButton
                android:id="@+id/buttonPickDate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/select_date_icon"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>


        <!-- Tlačítko -->
        <Button
            android:id="@+id/buttonSearchByDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search_by_date"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:layout_marginTop="4dp" />

        <!-- Výsledek -->
        <LinearLayout
            android:id="@+id/resultDateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1a1a1a"
            android:padding="20dp"
            android:layout_marginTop="8dp">

            <!-- Svátek má -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nameday"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <!-- Jméno -->
            <TextView
                android:id="@+id/textResultDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Oddělovač -->
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#00000000" />

        <!-- Pole pro jméno -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_name"
                android:textSize="20sp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#565656"
                android:backgroundTint="#FFFFFF"
                android:autofillHints="name" />

            <ImageButton
                android:id="@+id/buttonPerson"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_to_favorites"
                android:src="@drawable/ic_person_heart"
                app:tint="#565656" />
        </LinearLayout>


        <!-- Tlačítko -->
        <Button
            android:id="@+id/buttonSearchByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search_by_name"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:layout_marginTop="4dp" />

        <!-- Výsledek podle jména -->
        <LinearLayout
            android:id="@+id/resultNameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1a1a1a"
            android:padding="20dp"
            android:layout_marginTop="8dp">

            <!-- Datum svátku -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date_of_nameday"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <!-- Datum výsledku -->
            <TextView
                android:id="@+id/textResultName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
